case_report_retrieval/.ipynb_checkpoints/ret_out-checkpoint.txt
nohup: ignoring input
  File "/home/jcampbell/paed_covid_case_reports/case_report_retrieval/covid_script.py", line 1
    conda activate gopher
                 ^
SyntaxError: invalid syntax
